@@ -1,22 +1,17 @@
 package qupath.ext.omero.core.entities.repositoryentities.serverentities;
 
-import com.google.common.collect.Lists;
 import com.google.gson.annotations.SerializedName;
-import javafx.beans.property.ReadOnlyStringProperty;
-import javafx.beans.property.SimpleStringProperty;
-import javafx.beans.property.StringProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import qupath.ext.omero.core.WebClients;
+import qupath.ext.omero.Utils;
+import qupath.ext.omero.core.Client;
 import qupath.ext.omero.core.entities.repositoryentities.RepositoryEntity;
 import qupath.ext.omero.core.entities.repositoryentities.serverentities.image.Image;
-import qupath.ext.omero.gui.UiUtilities;
 
 import java.util.Date;
 import java.util.List;
-import java.util.Optional;
 import java.util.ResourceBundle;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -28,17 +23,16 @@ import java.util.concurrent.atomic.AtomicBoolean;
 public class PlateAcquisition extends ServerEntity {
 
     private static final Logger logger = LoggerFactory.getLogger(PlateAcquisition.class);
-    private static final ResourceBundle resources = UiUtilities.getResources();
+    private static final ResourceBundle resources = Utils.getResources();
     private static final String[] ATTRIBUTES = new String[] {
-            resources.getString("Web.Entities.PlateAcquisition.name"),
-            resources.getString("Web.Entities.PlateAcquisition.id"),
-            resources.getString("Web.Entities.PlateAcquisition.owner"),
-            resources.getString("Web.Entities.PlateAcquisition.group"),
-            resources.getString("Web.Entities.PlateAcquisition.acquisitionTime")
+            resources.getString("Entities.PlateAcquisition.name"),
+            resources.getString("Entities.PlateAcquisition.id"),
+            resources.getString("Entities.PlateAcquisition.owner"),
+            resources.getString("Entities.PlateAcquisition.group"),
+            resources.getString("Entities.PlateAcquisition.acquisitionTime")
     };
     private final transient ObservableList<Image> children = FXCollections.observableArrayList();
     private final transient ObservableList<Image> childrenImmutable = FXCollections.unmodifiableObservableList(children);
-    private final transient StringProperty label = new SimpleStringProperty((this.name == null ? "" : this.name) + " (0)");
     private final transient AtomicBoolean childrenPopulated = new AtomicBoolean(false);
     private transient volatile boolean isPopulating = false;
     private transient int numberOfWells = 0;
@@ -78,8 +72,8 @@ public class PlateAcquisition extends ServerEntity {
     }
 
     @Override
-    public ReadOnlyStringProperty getLabel() {
-        return label;
+    public String getLabel() {
+        return this.name == null ? "-" : this.name;
     }
 
     @Override
@@ -121,7 +115,7 @@ public class PlateAcquisition extends ServerEntity {
     /**
      * Indicates if an OMERO entity type refers to a plate acquisition.
      *
-     * @param type  the OMERO entity type
+     * @param type the OMERO entity type
      * @return whether this type refers to a plate acquisition
      */
     public static boolean isPlateAcquisition(String type) {
@@ -131,11 +125,10 @@ public class PlateAcquisition extends ServerEntity {
     /**
      * Set the number of wells of this plate acquisition.
      *
-     * @param numberOfWells  the number of wells of this plate acquisition
+     * @param numberOfWells the number of wells of this plate acquisition
      */
     public synchronized void setNumberOfWells(int numberOfWells) {
         this.numberOfWells = numberOfWells;
-        label.set((this.name == null ? "" : this.name) + " (" + numberOfWells + ")");
     }
 
     private void populateChildren() {
@@ -144,36 +137,35 @@ public class PlateAcquisition extends ServerEntity {
                     "The web server URI has not been set on this plate acquisition. See the setWebServerURI(URI) function."
             );
         } else {
-            WebClients.getClientFromURI(webServerURI).ifPresentOrElse(client -> {
+            Client.getClientFromURI(webServerURI).ifPresentOrElse(client -> {
                 isPopulating = true;
 
                 int wellSampleIndex = 0;
                 if (wellSampleIndices != null && wellSampleIndices.size() > 1) {
-                    wellSampleIndex = wellSampleIndices.get(0);
+                    wellSampleIndex = wellSampleIndices.getFirst();
                 }
 
-                client.getApisHandler().getWellsFromPlateAcquisition(getId(), wellSampleIndex).thenAcceptAsync(wells -> {
-                    List<Long> ids = wells.stream()
-                            .map(well -> well.getImagesIds(true))
-                            .flatMap(List::stream)
-                            .toList();
-                    List<List<Long>> batches = Lists.partition(ids, 16);
-
-                    for (List<Long> batch: batches) {
-                        children.addAll(batch.stream()
+                client.getApisHandler().getWellsFromPlateAcquisition(getId(), wellSampleIndex)
+                        .thenApplyAsync(wells -> wells.stream()
+                                .map(well -> well.getImagesIds(true))
+                                .flatMap(List::stream)
                                 .map(id -> client.getApisHandler().getImage(id))
                                 .map(CompletableFuture::join)
-                                .flatMap(Optional::stream)
-                                .toList());
-                    }
-
-                    isPopulating = false;
-                });
-            }, () -> logger.warn(String.format(
-                    "Could not find the web client corresponding to %s. Impossible to get the children of this plate acquisition (%s).",
+                                .toList()
+                        )
+                        .exceptionally(error -> {
+                            logger.error("Error while retrieving wells", error);
+                            return List.of();
+                        })
+                        .thenAccept(wells -> {
+                            children.addAll(wells);
+                            isPopulating = false;
+                        });
+            }, () -> logger.warn(
+                    "Could not find the web client corresponding to {}. Impossible to get the children of this plate acquisition ({}).",
                     webServerURI,
                     this
-            )));
+            ));
         }
     }
 }
