@@ -36,7 +36,7 @@ public class TestPoint {
     void Check_ROI() {
         Shape point = createPointFromJSON();
 
-        Class<? extends ROI> roiClass = point.createROI().getClass();
+        Class<? extends ROI> roiClass = point.createRoi().getClass();
 
         Assertions.assertEquals(PointsROI.class, roiClass);
     }
@@ -57,8 +57,11 @@ public class TestPoint {
     }
 
     private Shape createPointFromPathObject() {
-        return Shape.createFromPathObject(PathObjects.createAnnotationObject(
-                ROIs.createPointsROI(10, 20, null)
-        )).get(0);
+        return Shape.createFromPathObject(
+                PathObjects.createAnnotationObject(
+                        ROIs.createPointsROI(10, 20, null)
+                ),
+                true
+        ).getFirst();
     }
 }
